--- a/wp-content/themes/wp-starter/template-parts/base.twig
+++ b/wp-content/themes/wp-starter/template-parts/base.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html {{ function('language_attributes') }}>
+<html {{ function('language_attributes') }} class="overflow-x-hidden">
 	{# Head #}
 	{% include 'head.twig' %}
 	<body {{ function('body_class', 'bg-main-bg font-sans') }} id="body">
