--- a/wp-content/themes/wp-starter/template-parts/blocks/products-overview.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/products-overview.twig
@@ -55,7 +55,7 @@
 							{% endfor %}
 						</div>
 					</div>
-					<div class="js-products-carousel-pagination hs-pagination"></div>
+					<div class="js-products-carousel-pagination eea-pagination"></div>
 				</div>
 			{% endif %}
 		</div>
