--- a/wp-content/themes/wp-starter/template-parts/blocks/slider-investors.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/slider-investors.twig
@@ -45,7 +45,7 @@
 							</div>
 						{% endfor %}
 					</div>
-					<div class="js-investors-carousel-pagination hs-pagination"></div>
+					<div class="js-investors-carousel-pagination eea-pagination"></div>
 				</div>
 			</div>
 		{% endif %}
