--- a/wp-content/themes/wp-starter/template-parts/blocks/slider-news.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/slider-news.twig
@@ -36,7 +36,7 @@
 						{% endfor %}
 					</div>
 				</div>
-				<div class="js-news-carousel-pagination hs-pagination"></div>
+				<div class="js-news-carousel-pagination eea-pagination"></div>
 			</div>
 		{% endif %}
 		{% if cta %}
