--- a/wp-content/themes/wp-starter/assets/css/styles.css
+++ b/wp-content/themes/wp-starter/assets/css/styles.css
@@ -71,7 +71,7 @@ h3.active .icon-vertical {
     @apply opacity-100;
   }
 
-  .js-accordion-horz-item > div > div::after {
+  /* .js-accordion-horz-item > div > div::after {
     content: '';
     position: absolute;
     display: block;
@@ -94,7 +94,7 @@ h3.active .icon-vertical {
       rgba(132, 175, 245, 0) 0%,
       rgba(65, 117, 225, 1) 70%
     );
-  }
+  } */
 }
 
 .js-partners-carousel > .swiper-wrapper {
@@ -105,7 +105,6 @@ h3.active .icon-vertical {
 
 .js-nav.nav-open {
   min-height: 100dvh;
-  /* fix bug navigation appearing when swiping Swiper on iOS */
   opacity: 100;
 }
 
@@ -117,9 +116,6 @@ h3.active .icon-vertical {
   @apply max-w-[1504px] mx-auto w-full;
 }
 
-.privacy-policy .core-block > *:not(div) {
-  @apply max-w-[1504px] mx-auto w-full px-4 md:px-8;
-}
 
 .header-scrolled {
   @apply py-2.5;
@@ -129,13 +125,6 @@ h3.active .icon-vertical {
   .main-content {
     @apply pt-[128px];
   }
-}
-
-.wp-block-gallery {
-  @apply flex-nowrap;
-}
-.wp-block-gallery .core-block {
-  @apply inline-flex w-1/2;
 }
 
 .title-about {
@@ -195,3 +184,15 @@ h3.active .icon-vertical {
     background-size: 600px 1500px;
   }
 }
+
+
+.core-block > p {
+  @apply text-base leading-[200%] text-white/80
+}
+
+
+@media (min-width: 1024px) {
+  .core-block > p {
+    @apply !w-[66%]
+  }
+} 
