--- a/wp-content/themes/wp-starter/assets/css/typography.css
+++ b/wp-content/themes/wp-starter/assets/css/typography.css
@@ -183,14 +183,14 @@ h2.wp-block-heading  {
 }
 
 
-.article-content .core-block > p {
+/* .article-content .core-block > p {
  @apply text-[#C9C9C9] text-xl leading-[150%]
-}
+} */
 
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   .article-content .core-block > p,
   .article-content .core-block > h2 {
     @apply max-w-[66%]
   }
-}
+} */
