--- a/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
@@ -1,40 +1,18 @@
-<section class="overflow-hidden">
-	<div class="container px-6 md:px-12">
-		<div class="flex flex-col p-4 hero-home gap-y-4 lg:p-6">
-			{% set qas = fields.qas %}
-
-			{% if qas %}
-				<div class="flex flex-wrap mt-5 lg:mt-14">
-					<div class="!overflow-visible swiper js-accordion-carousel w-full lg:!hidden">
-						<div class="w-full swiper-wrapper">
-							{% for qa in qas %}
-								<div class="w-full swiper-slide">
-									{% set icon = qa.icon ? get_image(qa.icon) : false %}
-									<div class="w-full h-full qa lg:w-1/4">
-										<div class="h-full p-5 bg-blue-04">
-											<div class="flex flex-col h-full gap-y-4">
-												<h3 class="h4">{{ qa.title }}</h3>
-												<p class="grow body-2">{{ qa.text }}</p>
-												{% if icon %}
-													<img loading="lazy" width="50" height="50" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
-												{% endif %}
-											</div>
-
-										</div>
-									</div>
-								</div>
-							{% endfor %}
-						</div>
-					</div>
-					<div class="hidden -mx-2 lg:flex lg:flex-wrap js-accordion-horz">
+<div class="overflow-hidden">
+	<div class="flex flex-col w-full">
+		{% set qas = fields.qas %}
+		{% if qas %}
+			<div class="w-full">
+				<div class="!overflow-visible swiper js-accordion-carousel w-full lg:!hidden">
+					<div class="w-full swiper-wrapper">
 						{% for qa in qas %}
-							<div style="width:{{ 100 / (qas|length + 1) }}%" class="relative px-2 overflow-hidden transition-all duration-1000 origin-top-left js-accordion-horz-item">
+							<div class="w-full swiper-slide">
 								{% set icon = qa.icon ? get_image(qa.icon) : false %}
-								<div class="w-full h-full qa">
-									<div class="relative h-full p-5 cursor-default lg:overflow-hidden">
-										<div class="relative z-10 flex flex-col h-full gap-y-4">
-											<h3 class="w-full transition-all body-3">{{ qa.title }}</h3>
-											<p class="transition-all duration-500 grow body-2 lg:opacity-0">{{ qa.text }}</p>
+								<div class="w-full h-full qa lg:w-1/4">
+									<div class="h-full p-5">
+										<div class="flex flex-col h-full gap-y-4">
+											<h3 class="h4">{{ qa.title }}</h3>
+											<p class="grow body-2">{{ qa.text }}</p>
 											{% if icon %}
 												<img loading="lazy" width="50" height="50" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
 											{% endif %}
@@ -46,7 +24,26 @@
 						{% endfor %}
 					</div>
 				</div>
-			{% endif %}
-		</div>
+				<div class="hidden -mx-2 lg:flex lg:flex-wrap js-accordion-horz">
+					{% for qa in qas %}
+						<div style="width:{{ 100 / (qas|length + 1) }}%" class="relative px-2 overflow-hidden transition-all duration-1000 origin-top-left js-accordion-horz-item">
+							{% set icon = qa.icon ? get_image(qa.icon) : false %}
+							<div class="w-full h-[286px] md:h-[428px] lg:h-[570px] qa">
+								<div class="relative h-full cursor-default lg:overflow-hidden">
+									{% if icon %}
+										<img class="absolute inset-0 block object-cover object-center w-full h-full -z-10" loading="lazy" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
+									{% endif %}
+									<div class="absolute bottom-0 left-0 z-10 flex flex-col h-full p-5 ">
+										<h3 class="w-full text-2xl font-bold transition-all">{{ qa.title }}</h3>
+										<p class="transition-all duration-500 grow body-2 lg:opacity-0">{{ qa.text }}</p>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+			</div>
+		{% endif %}
 	</div>
-</section>
+</div>
