--- a/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
@@ -1,12 +1,7 @@
 {% set bg_color = fields.bg_color %}
-<section class="flex flex-col {% if bg_color == 'gray' %}bg-gray-03{% else %}bg-white{% endif %}">
-	<div class="flex flex-col py-10 gap-y-10 lg:py-12 lg:gap-y-16">
-		{% set title = fields.title ?? 'Partners Carousel' %}
+<div class="flex flex-col bg-[#1C1D1F] relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] w-screen">
+	<div class="flex flex-col py-6 gap-y-10 lg:gap-y-16">
 		{% set logos = fields.logos %}
-
-
-		<h2 class="text-center h2">{{ title }}</h2>
-
 		{% if logos %}
 			<div class="">
 				<div id="partners" class="swiper js-partners-carousel">
@@ -27,4 +22,4 @@
 		{% endif %}
 	</div>
 
-</section>
+</div>
