--- a/wp-content/themes/wp-starter/template-parts/blocks/eea-board-wall.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/eea-board-wall.twig
@@ -1,1 +1,61 @@
-here lieas the board wall
+
+<div class="flex flex-col">
+	<div class="flex flex-col py-6 gap-y-10 lg:gap-y-16">
+		{% set logos = fields.eea_board_members %}
+		{% if logos %}
+			<div class="">
+				<div>
+					<div class="flex">
+						{% for i in logos %}
+                            {% set image = i.logo ? get_image(i.logo) : false %}
+							<div class="">
+								<div class="">
+									<img loading="lazy" class="" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
+								</div>
+							</div>
+						{% endfor %}
+					</div>
+				</div>
+			</div>
+		{% endif %}
+	</div>
+
+</div>
+{# 
+
+<style>
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 10px;
+  }
+  .grid-item {
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    border-radius: 8px;
+  }
+  .grid-item img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
+
+<div id="logoGrid" class="grid"></div>
+
+<script>
+  const logos = [
+    "logo1.png", "logo2.png", "logo3.png", "logo4.png", "logo5.png"
+  ];
+
+  const grid = document.getElementById("logoGrid");
+
+  logos.forEach(logo => {
+    const div = document.createElement("div");
+    div.classList.add("grid-item");
+    div.innerHTML = `<img src="${logo}" alt="Logo">`;
+    grid.appendChild(div);
+  });
+</script> #}
