--- a/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
@@ -1,6 +1,6 @@
 {% set bg_color = fields.bg_color %}
-<div class="flex flex-col bg-[#1C1D1F] relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] w-screen">
-	<div class="flex flex-col py-6 gap-y-10 lg:gap-y-16">
+<div class="flex flex-col">
+	<div class="flex flex-col bg-[#1C1D1F] py-6 gap-y-10 lg:gap-y-16 relative left-1/2 right-1/2 -ml-[50vw] -mr-[50vw] w-screen">
 		{% set logos = fields.logos %}
 		{% if logos %}
 			<div class="">
@@ -10,7 +10,7 @@
 							{% set logo = logos[i % logos|length] %}
 							{% set image = logo.image ? get_image(logo.image) : false %}
 
-							<div class="swiper-slide w-full lg:!w-1/4">
+							<div class="swiper-slide w-full lg:!w-[140px]">
 								<div class="flex flex-col justify-center w-full h-[70px]">
 									<img loading="lazy" class="absolute inset-0 block object-contain object-center w-full h-full" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
 								</div>
