--- a/wp-content/themes/wp-starter/template-parts/blocks/entries.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/entries.twig
@@ -1,4 +1,5 @@
 <div class="grid grid-cols-1 gap-6 lg:py-8 md:grid-cols-2 lg:grid-cols-4">
+{% set entries = fields.entries %}
     {% if entries %}
         {% for post in entries %}
             {% include 'tease.twig' with {'post': post} %}
