--- a/wp-content/themes/wp-starter/template-parts/blocks/members-team.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/members-team.twig
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-1 gap-6 lg:py-8 md:grid-cols-2 lg:grid-cols-4">
+<div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
     {% set items = fields.memberteam_posts ?? [] %}
     {% if items %}
         {% for post in items %}
