--- a/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
@@ -33,8 +33,8 @@
 									{% if icon %}
 										<img class="absolute inset-0 block object-cover object-center w-full h-full -z-10" loading="lazy" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
 									{% endif %}
-									<div class="absolute bottom-0 left-0 z-10 flex flex-col h-full p-5 ">
-										<h3 class="w-full text-2xl font-bold transition-all">{{ qa.title }}</h3>
+									<div class="absolute bottom-0 left-0 z-10 flex flex-col p-5 ">
+										<h3 class="w-full text-2xl font-bold transition-all duration-500 opacity-0">{{ qa.title }}</h3>
 										<p class="transition-all duration-500 grow body-2 lg:opacity-0">{{ qa.text }}</p>
 									</div>
 
