--- a/wp-content/themes/wp-starter/template-parts/page-blog.twig
+++ b/wp-content/themes/wp-starter/template-parts/page-blog.twig
@@ -4,7 +4,7 @@
     
     <div class="container px-6 category-archive md:px-12">
         {% include 'breadcrumbs.twig' with { 'page': page } %}
-        <div class="lg:max-w-[66%] ">
+        <div class="space-y-10 lg:space-y-12">
             {{ post.content }}
         </div>
         {% if posts %}
