--- a/wp-content/themes/wp-starter/template-parts/page-blog.twig
+++ b/wp-content/themes/wp-starter/template-parts/page-blog.twig
@@ -1,5 +1,6 @@
 {% extends 'base.twig' %}
 
+
 {% block content %}
     
     <div class="container px-6 category-archive md:px-12">
@@ -11,7 +12,9 @@
             
             <div class=" md:grid md:grid-cols-2 lg:grid-cols-3 md:gap-10">
                 {% for post in posts %}
-                    {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+                    {% set category = post.terms('category')|first %}
+                    {% include ['tease-' ~ category.slug ~ '.twig', 'tease.twig'] %}
+
                 {% endfor %}
             </div>
         {% else %}
