--- a/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
@@ -20,11 +20,13 @@
 	<div class="relative flex flex-col md:flex-row-reverse md:flex-wrap">
 		{% set title = fields.title ?? 'Hero Home' %}
 		{% set text = fields.text ?? '' %}
-		{% set image = fields.image ? get_image(fields.image) : false %}
+		{% set image = fields.image_hero_home ? get_image(fields.image_hero_home) : false %}
 		<div class="md:w-5/12 md:pl-12">
-			<div class="relative aspect-w-16 aspect-h-15">
-				<img loading="lazy" class="object-cover object-center" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 700px" alt="{{ image.alt | default('Our Team') }}">
-			</div>
+			{% if image %}
+				<div class="relative aspect-w-16 aspect-h-15">
+					<img loading="lazy" class="object-cover object-center" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 700px" alt="{{ image.alt | default('Our Team') }}">
+				</div>
+			{% endif %}
 		</div>
 		<div class="md:w-7/12 md:pr-12">
 			<h1 class="h1 pt-[4.5rem] text-white ">{{ title | raw | replace({'<p>': '', '</p>': ''}) }}</h1>
