--- a/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
+++ b/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
@@ -1,8 +1,10 @@
 /* MAIN NAVIGATION HEADER */
 
-/* .main-header::before {
-  @apply content-[''] block absolute -z-10 w-full h-full top-0 backdrop-blur-sm;
-} */
+.main-header::before {
+  @apply content-[''] block absolute -z-10 w-full h-full top-0 backdrop-blur-lg;
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,0.8) 00%, rgba(252,70,107,0) 100%);
+}
 
 .menu-main-navigation-container {
   @apply grow;
@@ -20,7 +22,7 @@
 
 @media (min-width: 1024px) {
   .main-menu {
-    @apply flex gap-x-6 px-6 py-3 rounded-xl space-y-0;
+    @apply flex gap-x-6 px-6 py-3 rounded-xl space-y-0 items-center;
   }
   /* .main-menu::before {
     @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 backdrop-blur-md rounded-xl;
@@ -51,7 +53,7 @@
 
 .menu-item.current-menu-item > div > a,
 .sub-menu .menu-item.current-menu-item  > a {
-  @apply text-green-400 ;
+  @apply opacity-50 ;
 }
 
 @media (min-width: 1024px) {
@@ -66,10 +68,12 @@
 
 @media (min-width: 1024px) {
   .sub-menu {
-    @apply overflow-hidden max-h-0 absolute left-0 top-full  transition-all duration-300  whitespace-nowrap ;
+    @apply overflow-hidden max-h-0 absolute left-0 top-[130%]  transition-all duration-300  whitespace-nowrap ;
   }
   .sub-menu::before {
-    @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 rounded-xl;
+    @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 rounded-xl backdrop-blur-lg;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,0.8) 00%, rgba(252,70,107,0) 100%);
   }
 }
 
@@ -88,10 +92,17 @@
 
 @media (min-width: 1024px) {
   .sub-menu .menu-item  {
-    @apply pl-4 pt-2;
+    @apply px-6 pt-4;
+  }
+  .sub-menu .menu-item:last-child  {
+    @apply pb-4;
   }
 }
 
+
+.js-subnav-trigger:hover {
+  @apply opacity-80 
+}
 
 .sub-menu .menu-item a {
   @apply text-xl pb-0 inline-block;
@@ -124,4 +135,23 @@
 
 .lang-toggle-active svg {
   @apply rotate-180;
+}
+
+.menu-btn-gray,
+.menu-btn-black {
+  @apply border-0 pb-0
+}
+
+.menu-btn-gray  a {
+  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  py-4 px-7 whitespace-nowrap
+}
+
+.menu-btn-black a {
+  @apply rounded-full inline-block bg-black border py-4 px-7 border-white whitespace-nowrap
+}
+@media (min-width: 1024px) {
+  .menu-btn-gray a,
+  .menu-btn-black a {
+    @apply text-[15px]
+  }
 }
