--- a/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
+++ b/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
@@ -22,7 +22,7 @@
 
 @media (min-width: 1024px) {
   .main-menu {
-    @apply flex gap-x-6 px-6 py-3 rounded-xl space-y-0 items-center;
+    @apply flex gap-x-6 px-6 py-3 rounded-xl space-y-0 items-center pr-0;
   }
   /* .main-menu::before {
     @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 backdrop-blur-md rounded-xl;
