--- a/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/partners-carousel.twig
@@ -12,7 +12,7 @@
 
 							<div class="swiper-slide !w-[140px]">
 								<div class="flex flex-col justify-center w-full h-[70px]">
-									<img loading="lazy" class="absolute inset-0 block object-contain object-center w-full h-full" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
+									<img loading="lazy" class="absolute inset-0 block object-contain object-center w-full h-full grayscale" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
 								</div>
 							</div>
 						{% endfor %}
