--- a/wp-content/themes/wp-starter/template-parts/blocks/eea-board-wall.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/eea-board-wall.twig
@@ -1,7 +1,7 @@
 {% set colors = ['#FFCF01', '#00B6F0', '#F98D76', '#01AB64', '#B47AB4', '#3E5BA9'] %}
 
 <div class="flex flex-col">
-	<div class="flex flex-col py-6 gap-y-10 lg:gap-y-16">
+	<div class="flex flex-col gap-y-10 lg:gap-y-16">
 		{% set logos = fields.eea_board_members %}
 		{% if logos %}
 			<div class="">
@@ -12,7 +12,7 @@
               {% set borderColor = random(colors) %}
 							<div class="bg-[#141414] flex items-center justify-center min-h-[150px] md:min-h-[240px] border-b-[4px]" style="border-color: {{ borderColor }}">
 								<div class="w-1/2 lg:w-2/5 aspect-w-16 aspect-h-9">
-									<img loading="lazy" class="object-contain object-center" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
+									<img loading="lazy" class="object-contain object-center grayscale" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="200px" alt="{{ image.alt | default('Icon') }}">
 								</div>
 							</div>
 						{% endfor %}
