--- a/wp-content/themes/wp-starter/template-parts/tease-events.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease-events.twig
@@ -14,7 +14,7 @@
 					<a href="{{ post.link }}">{{ post.title }}</a>
 				</h3>
 				{% if post.excerpt|length %}
-					<p class="text-base leading-[200%] text-white/80 grow">
+					<p class="text-base leading-[200%] text-white/80">
 						{{ post.excerpt.read_more(false) }}
 					</p>
 				{% endif %}
