--- a/wp-content/themes/wp-starter/template-parts/tease-surveys-reports.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease-surveys-reports.twig
@@ -18,7 +18,7 @@
 					<a href="{{ download.url }}">{{ post.title }}</a>
 				</h3>
 				{% if post.excerpt|length %}
-					<p class="text-base leading-[200%] text-white/80 grow">
+					<p class="text-base leading-[200%] text-white/80">
 						{{ post.excerpt.read_more(false) }}
 					</p>
 				{% endif %}
