--- a/wp-content/themes/wp-starter/template-parts/breadcrumbs.twig
+++ b/wp-content/themes/wp-starter/template-parts/breadcrumbs.twig
@@ -1,4 +1,4 @@
-<nav class="pb-10 pt-36 md:pb-12" aria-label="Breadcrumb">
+<nav class="pt-32 lg:pt-24" aria-label="Breadcrumb">
   <ol class="text-base flex font-bold leading-[150%] uppercase">
     {# <li class="flex items-center">
       <a href="{{ site.url }}" class="breadcrumb__link">Home</a>
