--- a/wp-content/themes/wp-starter/template-parts/page.twig
+++ b/wp-content/themes/wp-starter/template-parts/page.twig
@@ -7,7 +7,7 @@
 		{% endif %}
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
 			<section class="article-content">
-				<div class="space-y-10 article-body md:space-y-12">
+				<div class="-mt-5 space-y-10 article-body md:space-y-12">
 					{{ post.content }}
 				</div>
 			</section>
