--- a/wp-content/themes/wp-starter/template-parts/blocks/members-team.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/members-team.twig
@@ -2,6 +2,7 @@
     {% set items = fields.memberteam_posts ?? [] %}
     {% if items %}
         {% for post in items %}
+            {% set shape_index = loop.index0 % 8 + 1 %}
             <div class="member-card">
                 {% include ['tease-member.twig'] %}
             </div>
