--- a/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/horizontal-accordion.twig
@@ -1,20 +1,24 @@
-<div class="overflow-hidden">
+<div class="lg:overflow-hidden">
 	<div class="flex flex-col w-full">
 		{% set qas = fields.qas %}
 		{% if qas %}
-			<div class="w-full">
-				<div class="!overflow-visible swiper js-accordion-carousel w-full lg:!hidden">
-					<div class="w-full swiper-wrapper">
+			<div class="w-full ">
+				<div class="!overflow-visible swiper js-quotes-carousel lg:!hidden">
+					<div class="swiper-wrapper">
 						{% for qa in qas %}
-							<div class="w-full swiper-slide">
+							<div class="p-5 transition-all duration-500 swiper-slide bg-white/5">
 								{% set icon = qa.icon ? get_image(qa.icon) : false %}
-								<div class="w-full h-full qa lg:w-1/4">
-									<div class="h-full p-5">
-										<div class="flex flex-col h-full gap-y-4">
-											<h3 class="h4">{{ qa.title }}</h3>
-											<p class="grow body-2">{{ qa.text }}</p>
+								<div class="">
+									<div class="h-[230px]">
+										<div class="flex flex-col">
+											<div class="absolute bottom-0 left-0 z-30 p-5">
+												<h3 class="h4">{{ qa.title }}</h3>
+												<p class="">{{ qa.text }}</p>
+											</div>
+											
 											{% if icon %}
-												<img loading="lazy" width="50" height="50" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
+												<div class="absolute inset-0 z-20 bg-black/20"></div>
+												<img class="absolute inset-0 z-10 object-cover object-center w-full h-full" loading="lazy" width="50" height="50" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
 											{% endif %}
 										</div>
 
@@ -23,17 +27,19 @@
 							</div>
 						{% endfor %}
 					</div>
+					<div class="js-quotes-carousel-pagination eea-pagination"></div>
 				</div>
 				<div class="hidden -mx-2 lg:flex lg:flex-wrap js-accordion-horz">
 					{% for qa in qas %}
 						<div style="width:{{ 100 / (qas|length + 1) }}%" class="relative px-2 overflow-hidden transition-all duration-1000 origin-top-left js-accordion-horz-item">
 							{% set icon = qa.icon ? get_image(qa.icon) : false %}
-							<div class="w-full h-[286px] md:h-[428px] lg:h-[570px] qa">
+							<div class="w-full h-[286px] md:h-[428px] lg:h-[570px]  text-white">
 								<div class="relative h-full cursor-default lg:overflow-hidden">
 									{% if icon %}
 										<img class="absolute inset-0 block object-cover object-center w-full h-full -z-10" loading="lazy" src="{{ icon.src }}" alt="{{ icon.alt | default('Icon') }}">
 									{% endif %}
-									<div class="absolute bottom-0 left-0 z-10 flex flex-col p-5 ">
+									<div class="absolute inset-0 z-10 bg-black/20"></div>
+									<div class="absolute bottom-0 left-0 z-20 flex flex-col p-5 ">
 										<h3 class="w-full text-2xl font-bold transition-all duration-500 opacity-0">{{ qa.title }}</h3>
 										<p class="transition-all duration-500 grow body-2 lg:opacity-0">{{ qa.text }}</p>
 									</div>
