--- a/wp-content/themes/wp-starter/template-parts/tease-member.twig
+++ b/wp-content/themes/wp-starter/template-parts/tease-member.twig
@@ -1,6 +1,6 @@
-<div class="tease h-full border border-black bg-card-bg tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
+<div class="tease flex flex-col h-full border border-black bg-card-bg tease-{{ post.post_type }}" id="tease-{{ post.ID }}">
 	{% block content %}
-		<div class="relative my-2">
+		<div class="relative mb-6">
 
 			{% set thumbnail_id = function('get_post_thumbnail_id', post.ID) %}
 			{% if thumbnail_id %}
@@ -8,9 +8,9 @@
 				{% set image_srcset = function('wp_get_attachment_image_srcset', thumbnail_id, 'full') %}
 				{% set image_sizes = function('wp_get_attachment_image_sizes', thumbnail_id, 'full') %}
 
-				<div class="relative w-full h-full overflow-hidden">
+				<div class="relative m-4 mb-0">
 
-
+{# 
 					<div class="absolute inset-0 z-20 h-full min-w-full -mx-1">
 						{% if shape_index == 1 %}
 							<svg fill="none" viewbox="0 0 310 230">
@@ -46,9 +46,9 @@
 							<path fill="#1C1C1E" fill-rule="evenodd" d="M310 0H0v230h310V0Zm-45.998 121.725c1.331 1.46 2.233 3.136 2.834 4.983 1.331 2.449 2.018 5.112 2.233 7.947-.021.859-.053 1.708-.086 2.556-.032.849-.064 1.697-.086 2.556-.257 2.449-1.159 4.64-2.619 6.573-1.073 2.105-2.705 3.737-4.852 4.854-4.681 2.857-9.35 5.703-14.02 8.549-4.67 2.846-9.34 5.691-14.02 8.548-2.34 1.439-4.691 2.868-7.042 4.296a1554.056 1554.056 0 0 0-7.043 4.296c7.901.429 15.76 1.16 23.618 2.234 5.238.687 9.575 3.522 13.182 7.259a26.82 26.82 0 0 1 5.625 9.924c.343 1.797.685 3.552 1.027 5.307l.004.019a15.026 15.026 0 0 1-.859 7.432c-.472 2.363-1.503 4.425-3.177 6.229-1.546 1.89-3.436 3.136-5.754 3.694-2.105 1.031-4.38 1.375-6.785.945a290.307 290.307 0 0 0-13.526-1.503c-15.072-1.332-30.23-1.59-45.388-1.203-3.607.129-7.214.258-10.821.43-14.642.73-29.285 1.847-43.885 3.007-3.22.515-6.312.172-9.318-1.074-.751-.408-1.492-.817-2.233-1.225-.741-.408-1.481-.816-2.233-1.224-3.048-2.234-5.539-4.983-7.385-8.291l-2.276-5.283a17.003 17.003 0 0 1-.945-7.862c-.129-2.019.215-3.995.902-5.885-2.104.344-4.208.687-6.312.988a876.868 876.868 0 0 1-38.26 4.811c-3.22.516-6.312.172-9.318-1.074a416.33 416.33 0 0 1-2.233-1.224 420.22 420.22 0 0 0-2.233-1.224c-3.049-2.234-5.539-4.983-7.385-8.291l-2.276-5.284a16.996 16.996 0 0 1-.945-7.861c-.129-2.492.386-4.897 1.46-7.174.902-2.277 2.319-4.081 4.294-5.37 1.675-1.675 3.736-2.706 6.14-3.05a106.194 106.194 0 0 0 5.24-1.675c.343-.129.675-.258 1.008-.387.333-.129.666-.258 1.01-.386 7.084-2.836 13.955-6.272 20.61-10.01-1.416-1.417-2.619-3.007-3.563-4.854-.387-.881-.763-1.761-1.138-2.642-.376-.88-.752-1.761-1.138-2.642-.945-2.577-1.245-5.198-.945-7.861-.129-2.492.387-4.897 1.46-7.174 1.89-3.265 3.908-6.572 6.613-9.236 2.662-2.663 5.668-5.026 8.803-7.131 6.398-5.498 13.139-10.61 20.139-15.336 4.379-2.964 8.852-5.789 13.325-8.614a756.125 756.125 0 0 0 8.918-5.69c-17.52 1.589-35.211 2.19-52.817 1.503-3.35-.43-6.398-1.676-9.146-3.652a342.547 342.547 0 0 0-2.018-1.804 342.54 342.54 0 0 1-2.019-1.804 26.83 26.83 0 0 1-5.625-9.923c-.343-1.805-.687-3.566-1.03-5.327a15.022 15.022 0 0 1 .859-7.432c.472-2.362 1.502-4.424 3.177-6.229 1.546-1.89 3.435-3.136 5.754-3.694 2.104-1.031 4.38-1.375 6.785-.945 7.214.3 14.385.343 21.599.172 9.275-.344 18.55-1.031 27.825-1.976 17.648-1.848 35.125-4.683 52.516-8.162 17.39-3.48 34.695-7.56 51.914-11.857 2.405-.515 4.724-.343 6.957.473 2.533.43 4.766 1.46 6.827 3.05.666.601 1.342 1.203 2.018 1.804.677.602 1.353 1.203 2.019 1.804a428.663 428.663 0 0 0 3.349 4.683c1.503 2.491 2.447 5.112 2.791 7.947.558 1.675.687 3.436.429 5.198.129 2.491-.386 4.897-1.46 7.174-.407.644-.826 1.299-1.244 1.953-.419.656-.838 1.311-1.246 1.956-5.11 4.51-10.52 8.677-16.317 12.2-4.509 2.75-9.19 5.198-13.913 7.56-.687.344-1.363.677-2.04 1.01-.676.333-1.352.666-2.039 1.01 3.993-.215 7.944-.344 11.937-.387 2.534.258 4.852 1.074 6.913 2.448 2.448 1.117 4.509 2.75 6.27 4.855a31.582 31.582 0 0 1 5.625 9.923c.945 2.577 1.245 5.198.945 7.861a10.437 10.437 0 0 1-.773 4.855c-.473 2.362-1.503 4.424-3.178 6.228-.747.637-1.511 1.255-2.282 1.879-.426.344-.854.691-1.282 1.042-.751.301-1.503.591-2.254.881a619.703 619.703 0 0 0-37.466 16.002c-4.208 1.976-8.373 3.952-12.538 6.014 6.57-1.761 13.097-3.651 19.623-5.584a913.964 913.964 0 0 0 36.714-11.857c3.221-.515 6.313-.172 9.318 1.074.752.408 1.492.816 2.233 1.224.741.408 1.482.817 2.233 1.225 2.362 1.546 4.251 3.565 5.711 5.928Z" clip-rule="evenodd"/>
 						</svg>
 					{% endif %}
-				</div>
-				<div class="relative aspect-w-16 aspect-h-12">
-					<img src="{{ image_src }}" srcset="{{ image_srcset }}" sizes="{{ image_sizes }}" alt="{{ post.post_title }}" class="block object-cover object-center">
+				</div> #}
+				<div class="relative overflow-hidden rounded-full aspect-w-1 aspect-h-1">
+					<img src="{{ image_src }}" srcset="{{ image_srcset }}" sizes="{{ image_sizes }}" alt="{{ post.post_title }}" class="object-cover object-center grayscale grayscaleblock">
 				</div>
 			</div>
 
@@ -56,12 +56,12 @@
 		{% endif %}
 	</div>
 
-	<div class="px-6 pb-8 text-center">
+	<div class="flex flex-col px-6 pb-8 text-center grow">
 		<h3 class="mb-1 h5">{{ post.post_title }}</h2>
 		<div class="mb-3 text-white/80 body-3">
 			{{ function('get_field', 'position', post.ID) }}
 		</div>
-		<div class="mb-6 text-white/80 body-2">{{ post.post_content }}</div>
+		<div class="mb-6 text-white/80 body-2 grow">{{ post.post_content }}</div>
 		<div class="flex justify-center space-x-4 text-white/80 space-2 body-3">
 			{% if function('get_field', 'x_url', post.ID) %}
 				<a class="flex items-center w-[45px] h-[45px] hover:opacity-80 transition-all justify-center rounded-full bg-[#252525] p-3" href="{{ function('get_field', 'x_url', post.ID) }}" target="_blank">
