--- a/wp-content/themes/wp-starter/template-parts/base.twig
+++ b/wp-content/themes/wp-starter/template-parts/base.twig
@@ -8,7 +8,7 @@
 		<div class="flex flex-col min-h-screen text-white page-wrapper">
 			{% include 'partials/header.twig' %}
 
-			<main id="main" class="main-content grow">
+			<main id="main" class="overflow-x-hidden main-content grow">
 				<div id="page-content">
 					{% block content %}
 					{% endblock %}
