--- a/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
+++ b/wp-content/themes/wp-starter/template-parts/blocks/hero-home.twig
@@ -21,7 +21,7 @@
 		{% set title = fields.title ?? 'Hero Home' %}
 		{% set text = fields.text ?? '' %}
 		{% set image = fields.image_hero_home ? get_image(fields.image_hero_home) : false %}
-		<div class="lg:w-5/12 lg:pl-12">
+		<div class="pt-6 lg:pt-0 lg:w-5/12 lg:pl-12">
 			{% if image %}
 				<div class="relative aspect-w-16 aspect-h-15">
 					<img loading="lazy" class="object-contain object-center" src="{{ image.src }}" srcset="{{ image.srcset }}" sizes="(max-width: 768px) 100vw, (max-width: 1024px) 700px" alt="{{ image.alt | default('Our Team') }}">
@@ -29,7 +29,7 @@
 			{% endif %}
 		</div>
 		<div class="lg:w-7/12 lg:pr-12">
-			<h1 class="h1 pt-[4.5rem] text-white ">{{ title | raw | replace({'<p>': '', '</p>': ''}) }}</h1>
+			<h1 class="h1 pt-[2.5rem] lg:pt-[4.5rem] text-white ">{{ title | raw | replace({'<p>': '', '</p>': ''}) }}</h1>
 			<div class="pt-12 body-1">
 				{{ text | raw }}
 			</div>
