--- a/wp-content/themes/wp-starter/template-parts/partials/header.twig
+++ b/wp-content/themes/wp-starter/template-parts/partials/header.twig
@@ -12,7 +12,7 @@
 		</button>
 		{# <div class="fixed inset-0 z-10 w-screen opacity-0 pointer-events-none bg-black/60 js-nav-mobile-overlay"></div> #}
 		<div class="fixed top-0 right-0 flex flex-col w-full h-screen overflow-hidden transition-all opacity-0 pointer-events-none lg:h-auto bg-black/80 backdrop-blur lg:backdrop-blur-0 js-nav lg:opacity-100 lg:relative lg:pointer-events-auto lg:w-fit lg:bg-transparent lg:overflow-visible lg:transition-none md:px-12 lg:flex-none lg:flex-row lg:p-0 lg:items-center lg:inset-auto lg:flex">
-			<div class="fixed top-0 bottom-0 right-0 w-4/5 p-6 pt-10 pr-10 overflow-auto transition-all duration-500 translate-x-full bg-black lg:bg-transparent lg:relative lg:w-auto inner-nav lg:translate-x-0 lg:p-0">
+			<div class="fixed top-0 bottom-0 right-0 w-4/5 p-6 pt-10 pr-10 overflow-auto transition-all duration-500 translate-x-full bg-black lg:overflow-visible lg:bg-transparent lg:relative lg:w-auto inner-nav lg:translate-x-0 lg:p-0">
 				<div class="z-20 flex items-center justify-between pb-5 ml-auto mr-0 text-white lg:hidden">
 					<a class="text-white text-large" href="{{ function('home_url') }}">
 						{% include 'partials/logo.twig' %}
