--- a/wp-content/themes/wp-starter/template-parts/404.twig
+++ b/wp-content/themes/wp-starter/template-parts/404.twig
@@ -4,9 +4,9 @@
 	<div class="container px-6">
 		<div class="relative flex flex-col p-10 pb-8 xl:py-20 xl:px-28 xl:flex-row xl:min-h-[750px] xl:flex-wrap">
 
-			<div class="font-thin font-sans mb-6 text-[120px] leading-none xl:text-[250px] relative z-20 xl:w-1/2 xl:pr-24">404</div>
+			<div class="font-heading mb-6 text-[120px] leading-none xl:text-[250px] relative z-20 xl:w-1/2 xl:pr-24">404</div>
 			<div class="relative z-20 xl:w-1/2 xl:pt-10">
-				<p class="pb-8 body-3">{{ __('The page you are looking for may have been removed, or you entered the wrong address', '404-text') }}.</p>
+				<p class="pb-8 text-base">{{ __('The page you are looking for may have been removed, or you entered the wrong address', '404-text') }}.</p>
 				<a href="/" class="btn-primary">{{ __('Back to home', 'back-to-home') }}</a>
 			</div>
 		</div>
