--- a/wp-content/themes/wp-starter/template-parts/page-text.twig
+++ b/wp-content/themes/wp-starter/template-parts/page-text.twig
@@ -3,7 +3,7 @@
 {% block content %}
 	<div class="content-wrapper page-text">
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<section class="article-content">
+			<section class="container px-6 md:px-12 article-content">
 				<div class="article-body wysiwyg">
 					{{ post.content }}
 				</div>
