--- a/wp-content/themes/wp-starter/template-parts/partials/pagination.twig
+++ b/wp-content/themes/wp-starter/template-parts/partials/pagination.twig
@@ -16,7 +16,7 @@
 			{# Previous #}
 			{% if posts.pagination.prev %}
 				<li class="prev">
-					<a class="btn-primary" href="{{ posts.pagination.prev.link }}">
+					<a class="" href="{{ posts.pagination.prev.link }}">
 						<svg class="rotate-180" width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 1.25L9.50341 9.18589C9.68934 9.35941 9.68934 9.64111 9.50341 9.81463L1 17.75" stroke="#F0F0F0" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
 						</svg>
@@ -24,7 +24,7 @@
 				</li>
 			{% else %}
 				<li class="prev disabled">
-					<button disabled class="btn-primary">
+					<button disabled class="">
 						<svg class="rotate-180" width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 1.25L9.50341 9.18589C9.68934 9.35941 9.68934 9.64111 9.50341 9.81463L1 17.75" stroke="#F0F0F0" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
 						</svg>
@@ -50,7 +50,7 @@
 			{# Next #}
 			{% if posts.pagination.next %}
 				<li class="next">
-					<a href="{{ posts.pagination.next.link }}" class="btn-primary">
+					<a href="{{ posts.pagination.next.link }}" class="">
 						<svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 1.25L9.50341 9.18589C9.68934 9.35941 9.68934 9.64111 9.50341 9.81463L1 17.75" stroke="#F0F0F0" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
 						</svg>
@@ -58,7 +58,7 @@
 				</li>
 			{% else %}
 				<li class="next disabled">
-					<button disabled class="btn-primary">
+					<button disabled class="">
 						<svg width="11" height="19" viewBox="0 0 11 19" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path d="M1 1.25L9.50341 9.18589C9.68934 9.35941 9.68934 9.64111 9.50341 9.81463L1 17.75" stroke="#F0F0F0" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"/>
 						</svg>
