--- a/wp-content/themes/wp-starter/template-parts/partials/header.twig
+++ b/wp-content/themes/wp-starter/template-parts/partials/header.twig
@@ -10,80 +10,7 @@
 				<path fill-rule="evenodd" clip-rule="evenodd" d="M4.25 9.5625C4.25 8.9757 4.7257 8.5 5.3125 8.5H28.6875C29.2743 8.5 29.75 8.9757 29.75 9.5625C29.75 10.1493 29.2743 10.625 28.6875 10.625H5.3125C4.7257 10.625 4.25 10.1493 4.25 9.5625ZM4.25 17C4.25 16.4132 4.7257 15.9375 5.3125 15.9375H28.6875C29.2743 15.9375 29.75 16.4132 29.75 17C29.75 17.5868 29.2743 18.0625 28.6875 18.0625H5.3125C4.7257 18.0625 4.25 17.5868 4.25 17ZM15.9375 24.4375C15.9375 23.8507 16.4132 23.375 17 23.375H28.6875C29.2743 23.375 29.75 23.8507 29.75 24.4375C29.75 25.0243 29.2743 25.5 28.6875 25.5H17C16.4132 25.5 15.9375 25.0243 15.9375 24.4375Z" fill="white"/>
 			</svg>
 		</button>
-		{# <div class="fixed inset-0 z-10 w-screen opacity-0 pointer-events-none bg-black/60 js-nav-mobile-overlay"></div> #}
-		<div class="fixed top-0 right-0 flex flex-col w-full h-screen overflow-hidden transition-all opacity-0 pointer-events-none lg:h-auto bg-black/80 backdrop-blur lg:backdrop-blur-0 js-nav lg:opacity-100 lg:relative lg:pointer-events-auto lg:w-fit lg:bg-transparent lg:overflow-visible lg:transition-none md:px-12 lg:flex-none lg:flex-row lg:p-0 lg:items-center lg:inset-auto lg:flex">
-			<div class="fixed top-0 bottom-0 right-0 w-4/5 p-6 pt-10 pr-10 overflow-auto transition-all duration-500 translate-x-full bg-black lg:overflow-visible lg:bg-transparent lg:relative lg:w-auto inner-nav lg:translate-x-0 lg:p-0">
-				<div class="z-20 flex items-center justify-between pb-5 ml-auto mr-0 text-white lg:hidden">
-					<a class="text-white text-large" href="{{ function('home_url') }}">
-						{% include 'partials/logo.twig' %}
-					</a>
-					<button class="block ml-auto mr-0 js-nav-toggle">
-						<svg width="32" height="32" viewbox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path opacity="0.4" d="M15.9998 29.3333C23.3636 29.3333 29.3332 23.3638 29.3332 16C29.3332 8.6362 23.3636 2.66667 15.9998 2.66667C8.63604 2.66667 2.6665 8.6362 2.6665 16C2.6665 23.3638 8.63604 29.3333 15.9998 29.3333Z" fill="white" fill-opacity="0.35"/>
-							<path d="M17.4133 16L20.48 12.9333C20.8666 12.5467 20.8666 11.9067 20.48 11.52C20.0933 11.1333 19.4533 11.1333 19.0666 11.52L16 14.5867L12.9333 11.52C12.5466 11.1333 11.9066 11.1333 11.52 11.52C11.1333 11.9067 11.1333 12.5467 11.52 12.9333L14.5866 16L11.52 19.0667C11.1333 19.4533 11.1333 20.0933 11.52 20.48C11.72 20.68 11.9733 20.7733 12.2266 20.7733C12.48 20.7733 12.7333 20.68 12.9333 20.48L16 17.4133L19.0666 20.48C19.2666 20.68 19.52 20.7733 19.7733 20.7733C20.0266 20.7733 20.28 20.68 20.48 20.48C20.8666 20.0933 20.8666 19.4533 20.48 19.0667L17.4133 16Z" fill="white"/>
-						</svg>
-					</button>
-				</div>
-
-				<nav class="z-20 main-navigation grow lg:grow-0 lg:ml-10">
-					<ul class="main-menu">
-						{% if menu and menu.items %}
-							{% for item in menu.items %}
-								<li class="{{ item.classes | join(' ') }}">
-									<div class="flex items-center justify-between pt-8 lg:pt-0">
-										<a class="flex pl-4 transition-all lg:text-[14px]" href="{{ item.link }}" title="Go to {{ item.title }} page.">
-											{{ item.title }}
-										</a>
-										{% if item.children %}
-											<div class="flex items-center justify-between cursor-pointer h-9 w-9 js-subnav-trigger">
-												<svg class="w-6 h-6 ml-2 shrink-0 " fill="none" viewbox="0 0 24 24">
-													<path fill="#fff" d="m9 8.125 3.88 3.88L9 15.885a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41l-4.59-4.59a.996.996 0 0 0-1.41 0c-.38.39-.39 1.03 0 1.42Z"/>
-												</svg>
-											</div>
-										{% endif %}
-									</div>
-									{% if item.children %}
-										<ul class="sub-menu">
-											{% for child in item.children %}
-												<li class="{{ child.classes | join(' ') }}">
-													<a target="{{child.target}}" href="{{ child.link }}" title="Go to {{ child.title }} page.">{{ child.title }}</a>
-												</li>
-											{% endfor %}
-										</ul>
-									{% endif %}
-								</li>
-							{% endfor %}
-						{% endif %}
-					</ul>
-				</nav>
-			</div>
-			{# <div class="relative flex items-start w-full pb-4 md:pb-8 lg:pb-0 lg:items-center">
-										{% if header_button_link %}
-											<a class="self-start uppercase btn-primary lg:mr-0 lg:ml-auto" href="{{header_button_link.url}}" class="btn">{{ header_button_link.title }}</a>
-										{% endif %}
-										{% if show_lang_switcher is defined and show_lang_switcher %}
-											{% if languages is defined %}
-												<div class="relative ml-10 text-base">
-													<button class="flex items-center mt-1.5 uppercase js-lang-switcher-toggle lg:mt-0 hover:text-blue-02">
-														{{ current_language }}
-														<svg class="ml-2 transition-all" width="10" height="8" viewbox="0 0 10 8" fill="none" xmlns="http://www.w3.org/2000/svg">
-															<path d="M9 3L5.1523 6.93546C5.06817 7.02151 4.93158 7.02151 4.84745 6.93546L1 3" stroke="currentColor" stroke-width="1.2" stroke-miterlimit="10" stroke-linecap="square" stroke-linejoin="bevel"/>
-														</svg>
-													</button>
-													<ul class="sub-menu js-lang-switcher lg:!ml-0 lg:!mt-3 lg:-right-[5px] lg:!left-auto lg:min-w-[70px] text-center">
-														{% for language in languages %}
-															{% if language.code != current_language %}
-																<li class="py-2 -ml-4 lg:ml-0 lg:px-4">
-																	<a class="uppercase hover:text-blue-02" href="{{ language.url }}">{{ language.code }}</a>
-																</li>
-															{% endif %}
-														{% endfor %}
-													</ul>
-												</div>
-											{% endif %}
-										{% endif %}
-									</div> #}
-
-		</div>
+			{% include 'partials/nav-mobile.twig' %}
+			{% include 'partials/nav-desktop.twig' %}
 	</nav>
 </header>
