--- a/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
+++ b/wp-content/themes/wp-starter/assets/css/blocks/navigation.css
@@ -2,8 +2,12 @@
 
 .main-header::before {
   @apply content-[''] block absolute -z-10 w-full h-full top-0 backdrop-blur-lg;
-  background: rgb(0,0,0);
-  background: linear-gradient(180deg, rgba(0,0,0,0.8) 00%, rgba(252,70,107,0) 100%);
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0.8) 00%,
+    rgba(252, 70, 107, 0) 100%
+  );
 }
 
 .menu-main-navigation-container {
@@ -22,7 +26,7 @@
 
 @media (min-width: 1024px) {
   .main-menu {
-    @apply flex gap-x-6 px-6 py-3 rounded-xl space-y-0 items-center pr-0;
+    @apply flex px-6 py-3 rounded-xl space-y-0 items-center pr-0 gap-x-6;
   }
   /* .main-menu::before {
     @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 backdrop-blur-md rounded-xl;
@@ -37,43 +41,51 @@
     @apply border-0 pb-0;
   }
 }
-.menu-item a {
-  @apply transition-all text-xl font-bold leading-none text-white pb-0;
+.menu-item > div {
+  @apply transition-all text-xl font-bold leading-none text-white pb-0 pl-4;
+}
+
+@media (min-width: 1024px) {
+  .menu-item > div {
+    @apply pl-0;
+  }
 }
 
 .menu-item:last-child {
-  @apply border-0
+  @apply border-0;
 }
 
 @media (min-width: 1024px) {
   .menu-item a {
-    @apply text-base p-0 text-[14px];
+    @apply text-base py-3 px-5 rounded-md text-[14px];
   }
 }
 
 .menu-item.current-menu-item > div > a,
-.sub-menu .menu-item.current-menu-item  > a {
-  @apply opacity-50 ;
+.sub-menu .menu-item.current-menu-item > a {
+  @apply opacity-50;
+}
+
+@media (min-width: 1024px) {
+  .menu-item.current-menu-item > div > a,
+  .sub-menu .menu-item.current-menu-item > a {
+    @apply opacity-100 bg-[#171717] ;
+  }
 }
 
 @media (min-width: 1024px) {
   .menu-item a:hover {
-    @apply opacity-50;
+    @apply bg-[#171717] opacity-100;
   }
 }
 
 .sub-menu {
-  @apply max-h-0 overflow-hidden	transition-all duration-300 relative;
+  @apply max-h-0 overflow-hidden	transition-all duration-500 relative;
 }
 
 @media (min-width: 1024px) {
   .sub-menu {
-    @apply overflow-hidden max-h-0 absolute left-0 top-[130%]  transition-all duration-300  whitespace-nowrap ;
-  }
-  .sub-menu::before {
-    @apply content-[''] block absolute -z-10 left-0 right-0 bottom-0 top-0 rounded-xl backdrop-blur-lg;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,0.8) 00%, rgba(252,70,107,0) 100%);
+    @apply overflow-hidden max-h-0 absolute left-0 top-[130%]  transition-all duration-300  whitespace-nowrap;
   }
 }
 
@@ -86,31 +98,31 @@
 .sub-menu-open {
   @apply max-h-[500px];
 }
-.sub-menu .menu-item  {
-  @apply border-0 pt-4 pb-0 pl-8;
+.sub-menu .menu-item {
+  @apply border-0 pt-2.5 pb-0 pl-8;
 }
 
 @media (min-width: 1024px) {
-  .sub-menu .menu-item  {
-    @apply px-6 pt-4;
-  }
-  .sub-menu .menu-item:last-child  {
-    @apply pb-4;
+  .sub-menu .menu-item {
+    @apply p-0 mb-3;
   }
 }
-
-
+@media (min-width: 1024px) {
 .js-subnav-trigger:hover {
-  @apply opacity-80 
+  @apply opacity-80;
+}
 }
 
 .sub-menu .menu-item a {
-  @apply text-xl pb-0 inline-block;
+  @apply text-lg pb-0 inline-block;
 }
 
 @media (min-width: 1024px) {
   .sub-menu .menu-item a {
-    @apply text-base text-[14px];
+    @apply text-base text-[14px] p-0 bg-[#171717] px-5 py-2.5 w-full;
+  }
+  .sub-menu .menu-item a:hover {
+    @apply opacity-70;
   }
 }
 
@@ -124,8 +136,20 @@
   @apply relative;
 }
 
-.menu-item-has-children .is-active.js-subnav-trigger svg {
+@media (min-width: 1024px) {
+  .menu-item-has-children:hover svg {
+    @apply rotate-90;
+  }
+}
+
+.is-active svg {
   @apply rotate-90;
+}
+
+@media (min-width: 1024px) {
+  .menu-item-has-children:hover > .sub-menu {
+    @apply max-h-[999px];
+  }
 }
 
 /* LANG SWITCHER */
@@ -139,19 +163,19 @@
 
 .menu-btn-gray,
 .menu-btn-black {
-  @apply border-0 pb-0
+  @apply border-0 pb-0;
 }
 
-.menu-btn-gray  a {
-  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  py-2 px-5 whitespace-nowrap
+.menu-btn-gray a {
+  @apply rounded-full inline-block bg-[#1B1A1F] border border-[#999999]  !py-2 px-5 whitespace-nowrap;
 }
 
 .menu-btn-black a {
-  @apply rounded-full inline-block bg-black border   py-2 px-5 border-white whitespace-nowrap
+  @apply rounded-full inline-block bg-black border   py-2 px-5 border-white whitespace-nowrap !py-2;
 }
 @media (min-width: 1024px) {
   .menu-btn-gray a,
   .menu-btn-black a {
-    @apply text-[15px]
+    @apply text-[15px];
   }
 }
